Rename website title and header to HealthTrace

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Symptom Checker Website</title>
+  <title>HealthTrace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to the Symptom Checker Website</h1>
+    <h1>Welcome to the HealthTrace</h1>
     <p class="disclaimer">
       <strong>Disclaimer:</strong> This website is NOT a substitute for professional medical advice, diagnosis, or treatment. If you have serious symptoms or concerns, please consult a qualified healthcare expert.
     </p>
