--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to the HealthTrace</h1>
+    <h1>Welcome to HealthTrace</h1>
     <p class="disclaimer">
       <strong>Disclaimer:</strong> This website is NOT a substitute for professional medical advice, diagnosis, or treatment. If you have serious symptoms or concerns, please consult a qualified healthcare expert.
     </p>
