--- a/index.html
+++ b/index.html
@@ -2,33 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HealthTrace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HealthTrace Symptom Checker</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to HealthTrace</h1>
-    <p class="disclaimer">
-      <strong>Disclaimer:</strong> This website is NOT a substitute for professional medical advice, diagnosis, or treatment. If you have serious symptoms or concerns, please consult a qualified healthcare expert.
-    </p>
+    <h1>Welcome to the HealthTrace</h1>
   </header>
 
   <main>
-    <section class="checker-section">
+    <section class="checker-highlight">
       <h2>Symptom Checker</h2>
-      <p>Enter your symptoms below (comma separated) and get advice for common diseases:</p>
       <form id="symptomForm">
-        <input type="text" id="symptoms" name="symptoms" placeholder="e.g. headache, fever, cough" autocomplete="off">
+        <input type="text" id="symptoms" placeholder="Enter symptoms, separated by commas" required>
         <button type="submit">Get Advice</button>
       </form>
-      <div id="advice"></div>
+      <div id="result"></div>
     </section>
+
+    <aside class="disclaimer">
+      <p><strong>Disclaimer:</strong> This tool provides general information only. It does not replace professional medical advice. Consult a healthcare provider for any health concerns.</p>
+    </aside>
   </main>
 
-  <footer>
-    <p>Stay healthy and remember: consult a professional for accurate medical advice.</p>
-  </footer>
   <script src="script.js"></script>
 </body>
 </html>
