--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <aside class="disclaimer">
-      <p><strong>Disclaimer:</strong> This tool provides general information only. It does not replace professional medical advice. Consult a healthcare provider for any health concerns.</p>
+      <p><strong>Disclaimer:</strong> This website is NOT a substitute for professional medical advice, diagnosis, or treatment. If you have serious symptoms or concerns, please consult a qualified healthcare expert.</p>
     </aside>
   </main>
 
