--- a/index.html
+++ b/index.html
@@ -3,29 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HealthTrace Symptom Checker</title>
+  <title>HealthTrace</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to HealthTrace</h1>
+    Welcome to HealthTrace
+    <img src="images/Logo.jpg" alt="Logo">
   </header>
 
-  <main>
-    <section class="checker-highlight">
-      <h2>Symptom Checker</h2>
-      <form id="symptomForm">
-        <input type="text" id="symptoms" placeholder="Enter symptoms, separated by commas" required>
-        <button type="submit">Get Advice</button>
-      </form>
-      <div id="result"></div>
-    </section>
+  <!-- Your other page content goes here -->
 
-    <aside class="disclaimer">
-      <p><strong>Disclaimer:</strong> This website is NOT a substitute for professional medical advice, diagnosis, or treatment. If you have serious symptoms or concerns, please consult a qualified healthcare expert.</p>
-    </aside>
-  </main>
-
-  <script src="script.js"></script>
 </body>
 </html>
