Add symptom checker section to index.html
Added a symptom checker section with a form for user input.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Header with logo -->
   <header>
     Welcome to HealthTrace
     <img src="images/Logo.jpg" alt="Logo">
   </header>
 
-  <!-- Your other page content goes here -->
+  <!-- Your existing symptom checker starts here -->
+  <section id="symptom-checker">
+    <!-- Replace the content below with your actual symptom checker code -->
+    <h2>Symptom Checker</h2>
+    <form>
+      <label for="symptom">Enter your symptom:</label>
+      <input type="text" id="symptom" name="symptom">
+      <button type="submit">Check</button>
+    </form>
+    <div id="results"></div>
+  </section>
+  <!-- Symptom checker ends here -->
 
 </body>
 </html>
