--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-  <!-- Header with logo -->
+  <!-- Main heading -->
   <header>
     Welcome to HealthTrace
-    <img src="images/Logo.jpg" alt="Logo">
   </header>
 
-  <!-- Your existing symptom checker starts here -->
+  <!-- Symptom checker section -->
   <section id="symptom-checker">
-    <!-- Replace the content below with your actual symptom checker code -->
     <h2>Symptom Checker</h2>
     <form>
       <label for="symptom">Enter your symptom:</label>
@@ -25,7 +23,6 @@
     </form>
     <div id="results"></div>
   </section>
-  <!-- Symptom checker ends here -->
 
 </body>
 </html>
